module 4 done, added product entity
