# apps/api/src/controllers/products/handlers/create.handler.ts
@@ -1,0 +1,14 @@
+import { ProductBody } from "../../../contracts/product.body";
+import { prisma } from "../../../lib/prisma";
+
+
+export const create = async (body: ProductBody) => {
+    const product = await prisma.product.create({
+        data: {
+            name: body.name,
+            expiresAt: body.expiresAt,
+        },
+    });
+
+    return product;
+};
